[package]
name = "swap"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.14.8"
spl-token = "3.5.0"
borsh = "0.9.3"
borsh-derive = "0.9.3"

[dev-dependencies]
solana-program-test = "1.14.8"
solana-sdk = "1.14.8"

[lib]
crate-type = ["cdylib", "lib"]
